================================================================================
 MicroTESK Builds
================================================================================

--------------------------------------------------------------------------------
 2014/10/18 MicroTESK 2.1 beta
--------------------------------------------------------------------------------

 2015/02/19 MicroTESK 2.1.4 beta
 
 The new build contains the following changes:

 - The logic of test sequence building and processing has been improved
 - The format of generated test programs has been improved
 - Several bug fixes and general improvements have been made

 2015/02/17 MicroTESK 2.1.3 beta

 The new build contains the following changes:

 - Several bug fixes and general improvements have been made

 2014/12/30 MicroTESK 2.1.2 beta

 The new build contains the following changes:

 - Facilities to describe the data segment in test templates were implemented  
 - Function 'trace' (nML) was supported
 - Possibility to create instances of modes and ops in nML code was implemented 
 - Aliases for memory locations (mem, reg, var) were supported 
 - Specification of the miniMIPS ISA was added to examples 

 2014/10/31 MicroTESK 2.1.1 beta

 The new build contains the following changes:

 - Issue related to processing test templates under Windows was fixed

 2014/10/18 MicroTESK 2.1.0 beta

 The new build contains the following changes:

 - Support for VLIW was implemented
 - Support for floating-point types was implemented
 - Ability to specify initialization code in test templates
   (the 'preparator' construct) was implemented
 - New test data generators were implemented
 - The test templates library was improved (including new text printing
   facilities and ability to specify unknown immediate values)
 - New examples of test templates demonstrating features of MicroTESK
   were added  
 - Ability to use labels rather than addresses in the generated code
   was implemented
